# halo-ops

./: .gitignore  2  CLAUDE.md  README.md  UPGRADES.md  academic_enrichment.py  account_targeter.py  agent_scout.py  claude_client.py  com.halo.roboscout-daily.plist  config.py  dspy_config.py  dspy_fit_scorer.py  enrichment.py  exa_discovery.py  feedback_collector.py  feedback_config.json  fit_scorer.py  gepa_optimizer.py  input_parser.py  logging_setup.py  models.py  models_scout.py  modules.py  n8n_sheets_webhook.json  n8n_workflow.json  output_formatter.py  person_discovery.py  prompt_store.py  prompts.py  pyproject.toml  request_1597_queries.csv  request_1597_queries_rejected.csv  request_loader.py  requirements.txt  roboscout_1721.csv  roboscout_query_gen.py  run_daily.py  semantic_scholar.py  server.py  (+9 more)
_legacy/: prompts.py  query_generator.py  query_validator.py
agent_scout/: academic_enrichment.py  agent_scout.py  claude_client.py  domain_resolver.py  enrichment.py  exa_discovery.py  fit_scorer.py  gepa_optimizer.py  input_parser.py  output_formatter.py  person_discovery.py  prompts.py  solve_planner.py
config/: .env.example
context/: query_generation_guide.md
monitoring/: feedback_sheet.py  health_check.py  metrics_tracker.py
optimization/: __init__.py  auto_optimize.py  metrics.py  optimize.py
roboscout/: com.halo.roboscout-daily.plist  config.py  dspy_config.py  logging_setup.py  modules.py  output_formatter.py  request_loader.py  roboscout_query_gen.py  run_daily.py  semantic_scholar.py
roboscout/monitoring/: __init__.py
roboscout/optimization/: build_examples.py  metrics.py  optimize.py
shared/: snowflake_client.py
tests/: conftest.py  test_config.py  test_models.py  test_run_daily.py  test_semantic_scholar.py  test_validation.py
